data/all_generated_tests/raw_wast_tests/br_if_InvalidorInconsistentControlFlowGraph_1740.wast
;; 1. **Test Description: Conditional Branch to Inaccessible Label**    - Create a scenario where `br_if` attempts to branch to a label that was never properly initialized within the context stack, such as jumping to a non-existent or outer scope.    - **Constraint Check**: Confirm that the label exists in the context.    - **CFG Relevance**: Tests invalid label targeting, ensuring CFG branching is correctly managed.

(assert_invalid
  (module (func $invalid-label-target
    (block (br_if 1 (i32.const 1)))
  ))
  "unknown label"
)